--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 			
             <div class="container">
 				<ui-view>
-					<p> Should be something here </p>
+					<p> Loading... </p>
 				</ui-view>
 			</div>
 
