--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 			<base href="/" target="_blank">
 	        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 	        <link rel="stylesheet" type="text/css" href="css/home.css">
-	        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+	        <link rel="icon" type="image/x-icon" href="favicon.ico" />
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 			<script type="text/javascript" src="bootstrap/js/bootstrap.bundle.js"></script>
 	</head>	
